--- a/src/assets/emotion-widget/emotion-widget.css
+++ b/src/assets/emotion-widget/emotion-widget.css
@@ -1,4 +1,5 @@
 .container-widget-text {
+  margin-bottom: 8vh;
   /* Emotion gauge styling */
   .gauge {
     /* Alignment, size properties */
@@ -72,22 +73,22 @@
 /* containerFace styling */
 .containerFace {
   /* Alignment, size properties */
-  width: 30%;
   height: 23%;
   border-radius: 0.625em; 
   position: absolute;
   top: 8em;
-  left: 10em;
+  left: 1em;
+  right: 1em;
   align-items: center;
   align-self: center;
-  
   
 }
 
 /* <img> tag within containerFace styling */
 .containerFace img {
-  margin-top: 2em;
-  /* Size properties */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   max-height: 100%;
 }
@@ -98,11 +99,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: -0.5em;
-
+  left: 1em;
+  right: 1em;
   /* Text properties */
   text-align: center; /* Centers text horizontally */
-  
   font-size: 2em;
   color: #195B8B;
 }
