--- a/src/assets/lines-of-code-widget/lines-of-code-styles.css
+++ b/src/assets/lines-of-code-widget/lines-of-code-styles.css
@@ -54,13 +54,13 @@
 
 /* Style for the number input field within the widget */
 .lines-widget-content .number {
-    font-size: 80px;
+    font-size: 80px; /* Default base font size */
     margin: 0 20px;
-    width: 60px; /* Decreased width */
+    width: 140px; /* Increase width to accommodate larger numbers */
     text-align: center;
-    height: 80px;
+    height: 100px; /* Increase height for a more proportional look */
     border: none;
-    border-radius: 50%;
+    border-radius: 50%; /* Ensure it remains circular */
     color: #FFF;
     background-color: #195B8B;
     
@@ -78,33 +78,28 @@
 /* Style for the confirm button within the widget */
 .lines-widget-content .confirm-btn {
     background-color: #f8f4f3;
-    color: white;
+    color: #195B8B;
     border: none;
-    border-radius: 10px;
-    padding: 10px 20px;
-    font-size: 18px;
+    border-radius: 10px; /* Slightly rounded corners */
+    width: 200px; /* Width of the button */
+    height: 50px; /* Height of the button */
+    font-size: 20px;
     cursor: pointer;
-    width: 100%;
+    margin: 20px auto; /* Center the button */
+    display: block;
     transition: background-color 0.3s;
+    text-align: center;
+    line-height: 50px; /* Vertically center the text */
 }
 
 /* Style for confirm button hover effect within the widget */
 .lines-widget-content .confirm-btn:hover {
-    background-color: #f8f4f3; /* Darker blue on hover */
+    background-color: #1CB6F0; /* Darker blue on hover */
 }
 
 /* Style for confirm button focus effect within the widget */
 .lines-widget-content .confirm-btn:focus {
     outline: none;
-}
-
-/* Style for the confirmation message container */
-.confirmation-message {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 
 /* Style for h3 elements within the confirmation message */
