--- a/src/assets/css/journalNavStyle.css
+++ b/src/assets/css/journalNavStyle.css
@@ -47,12 +47,12 @@ html, body {
 }
 
 .header {
-    margin-left: 4vb;
-    height: 12vh;
-    padding: 20px;
+    /* padding: 20px; */
     max-height: 12vh;
     display: flex;
     flex-direction: row;
+    margin-top: 3vh;
+    margin-bottom: 1vh;
 }
 
 .header h1 {
@@ -60,8 +60,15 @@ html, body {
     font-weight: 600;
     word-wrap: break-word;
     padding-top: 10px;
-    width: 11em;
+    width: 7.5em;
     font-size: 3em;
+    margin-left: 8vb;
+}
+
+.header-title {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
 }
 
 .component-wrapper {
@@ -103,9 +110,9 @@ body{
     padding: 0.5em;
     font-family: "Poppins";
     overflow: hidden;
-    max-height: 90vh;
+    max-height: 76vh;
     scrollbar-gutter: stable both-edges;
-    height: 90%;
+    height: 76vh;
 }
 
 #nav-container:hover {
