--- a/src/assets/css/journalNavStyle.css
+++ b/src/assets/css/journalNavStyle.css
@@ -40,19 +40,16 @@
     }
 }
 
-html, body {
-    margin: 0;
-    height: 100%;
-    overflow: hidden;
-}
+
+
 
 .header {
-    /* padding: 20px; */
-    max-height: 12vh;
+    margin-left: 4vb;
+    height: 12vh;
+    padding: 20px;
+
     display: flex;
     flex-direction: row;
-    margin-top: 3vh;
-    margin-bottom: 1vh;
 }
 
 .header h1 {
@@ -60,15 +57,8 @@ html, body {
     font-weight: 600;
     word-wrap: break-word;
     padding-top: 10px;
-    width: 7.5em;
+    width: 11em;
     font-size: 3em;
-    margin-left: 8vb;
-}
-
-.header-title {
-    display: flex;
-    flex-direction: row;
-    width: 70%;
 }
 
 .component-wrapper {
@@ -76,7 +66,7 @@ html, body {
     margin-top: 2vh;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset; 
     border-radius: 30px; 
-    border: 1px #E0E0DF solid;
+    border: 1px #E0E0DF solid
 }
 
 #text-container {
@@ -92,7 +82,7 @@ html, body {
 .wrapper {
     display: flex;
     color: red;
-    max-height: 88vh;
+    max-height: 100vh;
     overflow: hidden;
 }
 
@@ -110,9 +100,9 @@ body{
     padding: 0.5em;
     font-family: "Poppins";
     overflow: hidden;
-    max-height: 76vh;
+    max-height: 90vh;
     scrollbar-gutter: stable both-edges;
-    height: 76vh;
+    height: 90%;
 }
 
 #nav-container:hover {
@@ -125,23 +115,19 @@ body{
     width: 100%;
     align-items: center;
 
-    border: 2px #1A76AE solid;
-    border-radius: 4em;
-    padding: 0.7em;
-    background-color: #fdfdfd;
+    border: 2px #195B8B solid;
+    border-radius: 2em;
+    padding: 0.5em;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.5em;
 }
 
 .journalEntry button:hover {
-    /*filter: brightness(0.9);*/
-    background-color: #1CB6F0;
-    border-color: #1CB6F0;
+    filter: brightness(0.9);
 }
 
 .journalEntry text {
-    
     display: flex;
     flex-direction: column;
     padding-left: 0.5em;
@@ -215,9 +201,7 @@ body{
 }
 
 .nav-filter-buttons label:hover{
-    /*filter: brightness(0.9);*/
-    background-color: #1CB6F0;
-    border-color: #1CB6F0;
+    filter: brightness(0.9);
 }
 
 .nav-filter-buttons input[type="radio"]:checked + label {
