--- a/src/assets/emotion-widget/emotion-widget.css
+++ b/src/assets/emotion-widget/emotion-widget.css
@@ -1,5 +1,4 @@
 .container-widget-text {
-  margin-bottom: 8vh;
   /* Emotion gauge styling */
   .gauge {
     /* Alignment, size properties */
@@ -34,7 +33,7 @@
       position: absolute;
       width: 14em;  
       height: 14em;  
-      padding: 5.3em; 
+      padding: 5.5em; 
       left: 2em;  /* Adjusted to center the needle */
       top: 2em;  /* Adjusted to center the needle */
       border-radius: 100em;
@@ -47,7 +46,7 @@
           #46332a 3deg 7deg,
           #ccc 8deg 10deg,
           #0000 0
-        ) 0em -8.7em no-repeat, 
+        ) 0em -9.5em no-repeat, 
         radial-gradient(
           #46332a 0 50%,
           #ccc 51%
@@ -73,22 +72,22 @@
 /* containerFace styling */
 .containerFace {
   /* Alignment, size properties */
+  width: 30%;
   height: 23%;
   border-radius: 0.625em; 
   position: absolute;
   top: 8em;
-  left: 1em;
-  right: 1em;
+  left: 10em;
   align-items: center;
   align-self: center;
+  
   
 }
 
 /* <img> tag within containerFace styling */
 .containerFace img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 2em;
+  /* Size properties */
   max-width: 100%;
   max-height: 100%;
 }
@@ -99,10 +98,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 1em;
-  right: 1em;
+  margin-left: -0.5em;
+
   /* Text properties */
   text-align: center; /* Centers text horizontally */
+  
   font-size: 2em;
   color: #195B8B;
 }
